# CLI-Contact-Manager

./: .gitignore  README.md  contacts.py  pyproject.toml
cli_contact_manager/cli/: main.py  menu.py
cli_contact_manager/db/: database.py
cli_contact_manager/services/: __init__.py  contacts_service.py
