[project]
name = "cli-contact-manager"
version = "0.1.0"
description = "A simple CLI contact manager using SQLite"
readme = "README.md"
authors = [{ name = "I-Am-Sooraj" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }

[project.scripts]
contacts = "cli_contact_manager.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
